Footer align fix, should be good

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -24,4 +24,16 @@
     font-size: 5*$unit;
     color: $font-color;
   }
+  .row {
+    display: flex;
+    justify-content: space-between;
+    height: inherit;
+  }
+
+  .icon {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
